# CrewAI

./: .gitignore
dev/: README.md  pyproject.toml
dev/src/dev/: crew.py  main.py
pilot/: README.md  pyproject.toml  report.md  test.py  test2.py
pilot/src/pilot/: crew.py  main.py
pilot/src/pilot/config/: agents.yaml  tasks.yaml
