[tool.poetry]
name = "pilot"
version = "0.1.0"
description = "Pilot using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }


[tool.poetry.scripts]
pilot = "pilot.main:run"
run_crew = "pilot.main:run"
train = "pilot.main:train"
replay = "pilot.main:replay"
test = "pilot.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
